[New Feature]完成main页面基本绘制

--- a/pages/square/square.less
+++ b/pages/square/square.less
@@ -6,7 +6,7 @@ page {
 
   .container-top {
     position: fixed;
-    top: 50rpx;
+    top: 4%;
     width: 100%;
     z-index: 2;
     display: flex;
@@ -14,10 +14,10 @@ page {
     justify-content: space-between;
 
 
-    height: 300rpx;
+    height: 20%;
 
     .userInfo {
-      width: 100%;
+      width: 55%;
 
       display: flex;
       flex-direction: column;
@@ -30,7 +30,7 @@ page {
         align-items: center;
         justify-content: space-between;
 
-        width: 80%;
+        width: 85%;
 
         padding-left: 32rpx;
 
@@ -55,6 +55,7 @@ page {
 
           progress {
             width: 50%;
+            margin: 0 16rpx;
           }
         }
       }
@@ -64,14 +65,14 @@ page {
 
         .avatarImg {
           border-radius: 50%;
-          width: 128rpx;
+          width: 100rpx;
         }
       }
 
       .userInfo-nickName {
         width: fit-content;
 
-        padding: 8rpx 64rpx;
+        padding: 8rpx 48rpx;
 
         text-align: center;
         border: 1rpx solid gray;
@@ -85,6 +86,7 @@ page {
       margin: 64rpx 0;
       padding: 8rpx 32rpx;
       background-color: rgba(0, 0, 0, 0.24);
+      width: 35%;
 
       border-radius: 8rpx;
 
@@ -92,13 +94,14 @@ page {
         padding: 8rpx 8rpx;
         background-color: white;
         border-radius: 16rpx;
+        width: 80%;
       }
     }
   }
 
   .roomScroll {
     position: fixed;
-    bottom: 200rpx;
+    top: 24%;
     height: 1100rpx;
     background-color: pink !important;
 
