--- a/pages/visit/visit.wxml
+++ b/pages/visit/visit.wxml
@@ -1,4 +1,32 @@
-<!--square.wxml-->
+<!--visit.wxml-->
 <view class="container">
+  <view class="container-top">
+    <view class="userInfo">
+      <view class="userInfo-gold-level">
+        <view class="userInfo-gold">
+          <image class="goldImg" src="../../assets/square/gold.png" mode="widthFix"></image>
+          <text>1634</text>
+        </view>
+        <view class="userInfo-level">
+          <text>3级</text>
+          <progress percent="80" stroke-width="10" color="white" border-radius="10"></progress>
+        </view>
+      </view>
+      <view class="userInfo-avatar">
+        <image class="avatarImg" src="../../assets/square/room.jpg" mode="widthFix"></image>
+      </view>
+      <view class="userInfo-nickName">测试君</view>
+    </view>
 
+    <view class="btn-set">
+      <image src="../../assets/main/config.png" mode="widthFix" class="btn"></image>
+      <image src="../../assets/main/config.png" mode="widthFix" class="btn"></image>
+    </view>
+  </view>
+  <view class="room-name">
+    <view class="text">摆烂小屋</view>
+  </view>
+  <view class="focus-btn">
+    <view class="text">专注</view>
+  </view>
 </view>
