--- a/pages/mine/mine.less
+++ b/pages/mine/mine.less
@@ -1,7 +1,7 @@
 .page {
   height: 100vh;
   width: 100vw;
-  background-color: rgba(38,34,57,1);
+  background:-webkit-linear-gradient(top,#C7E1FA,#4F8DCC);
   display: flex;
   flex-direction: column;
 }
@@ -9,29 +9,32 @@
   position: relative;
   top: 10vh;
   height: 2.45vh;
-  border-radius: 21rpx;
-  border: 1px solid rgba(127,127,127,1);
-  margin-left: 44vw;
+  border-radius: 10rpx;
+  border: 1px solid #7F7F7F;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
-  width: 424rpx;
+  width: 360rpx;
 }
 .border{
   width: 343rpx;
   height: 39rpx;
   flex-direction: row;
   display: flex;
-  margin: 2rpx 0 0 49rpx;
+  margin-top: 2px;
+  margin-left: 10px;
+  margin-right: auto;
 }
 .icon1{
-  width: 28rpx;
-  height: 25rpx;
-  margin-top: 7rpx;
+  width: 30rpx;
+  height: 27rpx;
+  margin-top: 5rpx;
 }
 .text1{
   font-size: 3.5vw;
   color: white;
-  padding-right: 8vw;
+  padding-right: 5vw;
   padding-left: 2vw;
 }
 .text2{
@@ -43,7 +46,7 @@
   border-radius: 12rpx;
   background-color: rgba(255,255,255,0.44);
   width: 126rpx;
-  margin: 7rpx 0 0 11rpx;
+  margin: 7rpx 0 0 0;
 }
 .mod2{
   width: 88rpx;
@@ -70,14 +73,14 @@
   text-align: center;
 }
 .name{
-  color: #D8D8D8;
+  color: white;
 }
 .block4{
   position: relative;
   top: 17vh;
   height: 6vh;
   border-radius: 14rpx;
-  background-color: rgba(0,0,0,0.40);
+  background-color: rgba(0,0,0,0.20);
   width: 589rpx;
   margin-left: auto;
   margin-right: auto;
@@ -134,10 +137,10 @@
   margin: 7rpx 0 0 33rpx;
 }
 .text4{
-  width: 89rpx;
+  width: 120rpx;
   height: 1.5vh;
-  color: rgba(255,255,255,1);
-  font-size: 19rpx;
+  color: rgba(0,0,0,1);
+  font-size: 2.7vw;
   text-align: left;
   margin-left: 11rpx;
 }
@@ -160,10 +163,10 @@
   margin-right: auto;
 }
 .text6{
-  width: 77rpx;
+  width: 90rpx;
   height: 1.6vh;
   color: rgba(0,0,0,0.79);
-  font-size: 19rpx;
+  font-size: 22rpx;
   line-height: 28rpx;
   position: relative;
   left: 20vw;
@@ -185,7 +188,7 @@
 }
 .enter{
   width: 2vw;
-  height: 1.3vh;
+  height: 1.4vh;
 }
 .block6{
   width: 22vw;
@@ -210,7 +213,7 @@
 .name1{
   height: 4.5vh;
   border-radius: 35rpx;
-  background-color: rgba(0,0,0,0.71);
+  background-color: rgba(38,34,57,0.45);
   width: 303rpx;
   text-align: center;
 }
@@ -256,8 +259,8 @@
 .block9{
   height: 11.4vh;
   border-radius: 16rpx;
-  border: 1px solid rgba(38,33,57,1);
-  background-color: rgba(255,255,255,1);
+  border: 1px solid #C7E1FA;
+  background-color: #C7E1FA;
   width: 468rpx;
   margin-left: auto;
   margin-right: auto;
@@ -305,7 +308,7 @@
 .complete{
   height: 5vh;
   border-radius: 20rpx;
-  background-color: indigo;
+  background-color: #4A7EB2;
   width: 25vw;
   text-align: center;
 }
