--- a/pages/mine/mine.less
+++ b/pages/mine/mine.less
@@ -1,314 +1,556 @@
 .page {
-  height: 100vh;
-  width: 100vw;
-  background:-webkit-linear-gradient(top,#C7E1FA,#4F8DCC);
+  position: relative;
+
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
+
+  color: black;
+
+  .player-info {
+    position: absolute;
+
+    width: 100vw;
+    height: 532rpx;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-items: center;
+    justify-content: center;
+    text-align: center;
+
+    .gold-level{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      align-content: center;
+      justify-items: center;
+      justify-content: center;
+
+      width: 360rpx;
+      height: 42rpx;
+      margin: 108rpx auto 8rpx;
+      border-radius: 16rpx;
+      border: 1px solid #7F7F7F;
+
+      image {
+        width: 32rpx; height: 32rpx;
+        margin-right: 8rpx;
+      }
+      text { font-size: 28rpx; }
+      .gold { width: 25%; text-align: left; }
+      .level { margin: 0 12rpx; }
+      .exp-background {
+        position: relative;
+
+        width: 40%;
+        height: 28rpx;
+        background: rgba(255,255,255,0.44);
+        border-radius: 14rpx;
+
+        .exp-bar {
+          position: absolute;
+          left: 0; right: 40%;
+          top: 0; bottom: 0;
+          background: #FFFFFF;
+          border-radius: 14rpx;
+        }
+      }
+    }
+    .avatar {
+      width: 128rpx; height: 128rpx;
+      margin: 28rpx;
+      border-radius: 50%;
+      border: #F8D1DB solid 8rpx;
+    }
+    .name {
+      width: 384rpx;
+      text-align: center;
+      color: black;
+    }
+    .slogan {
+      width: 70%; height: 80rpx;
+
+      margin: 16rpx auto;
+      padding: 16rpx 32rpx;
+      border-radius: 24rpx;
+      background-color: rgba(0,0,0,0.16);
+      font-size: 24rpx;
+
+      text-align: left;
+
+      color: white;
+    }
+  }
+
+  .room-list {
+    position: absolute;
+    top: 548rpx; bottom: 0;
+
+    .label {
+      display: block;
+      width: fit-content;
+      height: 28rpx;
+      line-height: 28rpx;
+      font-size: 28rpx;
+
+      margin-left: 80rpx;
+    }
+    .room-card {
+      position: relative;
+
+      width: 85%;
+      height: 192rpx;
+
+      background-color: rgba(255,255,255,0.3);
+      border-radius: 36rpx;
+
+      //padding: 0 32rpx;
+      margin: 28rpx auto;
+
+      display: flex;
+      flex-direction: row;
+      align-content: center;
+      align-items: center;
+
+      .room {
+        width: fit-content;
+        height: calc(100% - 32rpx);
+        padding: 32rpx;
+      }
+      .info {
+        width: 60%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+
+        .user {
+          font-size: 24rpx;
+          margin-top: 24rpx;
+        }
+        .name {
+          width: fit-content;
+          padding: 8rpx 16rpx;
+          background-color: rgba(0,0,0,0.2);
+          color: white;
+          font-size: 24rpx;
+          border-radius: 16rpx;
+          margin: 8rpx 0;
+        }
+      }
+      .enter-tips {
+        position: absolute;
+        bottom: 16rpx;
+        right: 32rpx;
+        width: 128rpx;
+        height: 32rpx;
+        line-height: 32rpx;
+
+        font-size: 24rpx;
+
+        display: flex;
+        flex-direction: row;
+        align-content: center;
+        align-items: center;
+
+        .enter {
+          display: block;
+          width: 24rpx;
+          height: 24rpx;
+          margin-left: 8rpx;
+        }
+      }
+      .star {
+        position: absolute;
+        top: 16rpx;
+        right: 32rpx;
+        width: 32rpx;
+        height: 32rpx;
+      }
+    }
+  }
 }
-.block1{
+
+.popup {
+  width: 80%;
+  height: fit-content;
   position: relative;
-  top: 10vh;
-  height: 2.45vh;
-  border-radius: 10rpx;
-  border: 1px solid #7F7F7F;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  flex-direction: column;
-  width: 360rpx;
+
+  padding: 32rpx 0;
+
+  .popup-content {
+
+    height: fit-content;
+
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+
+    .avatar {
+      width: 192rpx; height: 192rpx;
+      margin: 16rpx;
+      border-radius: 50%;
+      border: #F8D1DB solid 10rpx;
+    }
+    .name {
+      width: 60%;
+      height: 72rpx;
+      color: white;
+      background-color: rgba(0,0,0,0.5);
+      border-radius: 36rpx;
+      margin-top: 24rpx;
+      text-align: center;
+    }
+    .gender {
+      display: flex;
+      flex-direction: row;
+      align-content: center;
+      align-items: center;
+
+      text-align: center;
+
+      view {
+        color: black;
+        border-radius: 36rpx;
+        padding: 12rpx 32rpx;
+        margin: 24rpx;
+        font-size: 28rpx;
+        text-align: center;
+      }
+      .male { background-color: #EAEAEA; }
+      .female { background-color: #F4D5D5; }
+    }
+
+    .slogan {
+      width: 75%; height: 192rpx;
+      background-color: #C7E1FA;
+      border-radius: 24rpx;
+
+      padding: 20rpx 36rpx;
+      font-size: 28rpx;
+    }
+    .buttons {
+      display: flex;
+      flex-direction: row;
+      align-content: center;
+      align-items: center;
+
+      text-align: center;
+
+      margin-top: 36rpx;
+      margin-bottom: 20rpx;
+
+      view {
+        color: white;
+        width: 192rpx; height: 80rpx;
+        line-height: 80rpx;
+        border-radius: 24rpx;
+        margin: 0rpx 32rpx;
+        font-size: 32rpx;
+      }
+      .ok { background-color: #4A7EB2 }
+      .cancel { background-color: #D8D8D8 }
+    }
+  }
+
 }
-.border{
-  width: 343rpx;
-  height: 39rpx;
-  flex-direction: row;
-  display: flex;
-  margin-top: 2px;
-  margin-left: 10px;
-  margin-right: auto;
-}
-.icon1{
-  width: 30rpx;
-  height: 27rpx;
-  margin-top: 5rpx;
-}
-.text1{
-  font-size: 3.5vw;
-  color: white;
-  padding-right: 5vw;
-  padding-left: 2vw;
-}
-.text2{
-  font-size:3.5vw;
-  color: white;
-}
-.mod1{
-  height: 25rpx;
-  border-radius: 12rpx;
-  background-color: rgba(255,255,255,0.44);
-  width: 126rpx;
-  margin: 7rpx 0 0 0;
-}
-.mod2{
-  width: 88rpx;
-  height: 25rpx;
-  border-radius: 12rpx;
-  background-color: rgba(255,255,255,0.84);
-}
-.block2{
-  position: relative;
-  top: 13.5vh;
-  margin-left: auto;
-  margin-right: auto;
-  width: 130rpx;
-  height: 130rpx;
-  border: 5px solid #D8D8D8;
-  border-radius: 250rpx;
-}
-.block3{
-  width: 30vw;
-  position: relative;
-  top: 15vh;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-}
-.name{
-  color: white;
-}
-.block4{
-  position: relative;
-  top: 17vh;
-  height: 6vh;
-  border-radius: 14rpx;
-  background-color: rgba(0,0,0,0.20);
-  width: 589rpx;
-  margin-left: auto;
-  margin-right: auto;
-}
-.slogan{
-  width: 67vw;
-  height: 35rpx;
-  display: block;
-  overflow-wrap: break-word;
-  color: rgba(255,255,255,1);
-  font-size: 25rpx;
-  line-height: 35rpx;
-  text-align: left;
-  position: relative;
-  top: 1vh;
-  margin-left: auto;
-  margin-right: auto;
-}
-.collect{
-  position: relative;
-  top: 19vh;
-  padding-left: 9vw;
-}
-.text3{
-  color: white;
-  font-size: 3.5vw;
-}
-.block5{
-  position: relative;
-  top: 20vh;
-  height: 10.5vh;
-  border-radius: 42rpx;
-  background-color: rgba(255,255,255,0.3);
-  display: flex;
-  flex-direction: column;
-  width: 661rpx;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 2vh;
-}
-.room{
-  width: 584rpx;
-  height: 151rpx;
-  flex-direction: row;
-  display: flex;
-  margin: 14rpx 0 0 44rpx;
-}
-.info{
-  width: 152rpx;
-  height: 86rpx;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 7rpx 0 0 33rpx;
-}
-.text4{
-  width: 120rpx;
-  height: 1.5vh;
-  color: rgba(0,0,0,1);
-  font-size: 2.7vw;
-  text-align: left;
-  margin-left: 11rpx;
-}
-.roomName{
-  height: 3vh;
-  border-radius: 16rpx;
-  background-color: rgba(0,0,0,0.2);
-  margin-top: 5rpx;
-  display: flex;
-  flex-direction: column;
-  width: 152rpx;
-}
-.text5{
-  width: 98rpx;
-  height: 2vh;
-  color: rgba(255,255,255,1);
-  font-size: 25rpx;
-  margin-top: 0.4vh;
-  margin-left: auto;
-  margin-right: auto;
-}
-.text6{
-  width: 90rpx;
-  height: 1.6vh;
-  color: rgba(0,0,0,0.79);
-  font-size: 22rpx;
-  line-height: 28rpx;
-  position: relative;
-  left: 20vw;
-  top: 7vh;
-}
-.label{
-  width: 33rpx;
-  height: 8.1vh;
-  margin-top: 7rpx;
-  position: relative;
-  left: 20.5vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.star{
-  width: 33rpx;
-  height: 33rpx;
-}
-.enter{
-  width: 2vw;
-  height: 1.4vh;
-}
-.block6{
-  width: 22vw;
-  height: 22vw;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 3vh;
-}
-.avatar{
-  width: 22vw;
-  height: 22vw;
-  border: 5px solid #D8D8D8;
-  border-radius: 250rpx;
-}
-.block7{
-  position: relative;
-  top: 2.5vh;
-  width: 40vw;
-  margin-left: auto;
-  margin-right: auto;
-}
-.name1{
-  height: 4.5vh;
-  border-radius: 35rpx;
-  background-color: rgba(38,34,57,0.45);
-  width: 303rpx;
-  text-align: center;
-}
-.name-text{
-  height: 3vh;
-  width: 30vw;
-  position: relative;
-  top: 0.6vh;
-  margin-left: auto;
-  margin-right: auto;
-  color: white;
-}
-.block8{
-  width: 235rpx;
-  height: 63rpx;
-  flex-direction: row;
-  display: flex;
-  justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  top: 3.5vh;
-}
-.male{
-  height: 3.85vh;
-  border-radius: 32rpx;
-  background-color: rgba(234,234,234,1);
-  width: 91rpx;
-  text-align: center;
-}
-.gender-text{
-  position: relative;
-  top: 0.45vh;
-  font-size: 3.8vw;
-}
-.female{
-  height: 3.85vh;
-  border-radius: 32rpx;
-  background-color: rgba(244,213,213,1);
-  width: 91rpx;
-  text-align: center;
-}
-.block9{
-  height: 11.4vh;
-  border-radius: 16rpx;
-  border: 1px solid #C7E1FA;
-  background-color: #C7E1FA;
-  width: 468rpx;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  top: 4.5vh;
-}
-.slogan1{
-  width: 50vw;
-  height: 7vh;
-  display: block;
-  overflow-wrap: break-word;
-  color: rgba(0,0,0,1);
-  font-size: 4vw;
-  line-height: 35rpx;
-  text-align: left;
-  margin-top:2vh;
-  margin-left: auto;
-  margin-right: auto;
-  word-break:break-all
-}
-.block10{
-  width: 60vw;
-  height: 5vh;
-  flex-direction: row;
-  display: flex;
-  justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  top: 6vh;
-}
-.cancel{
-  height: 5vh;
-  border-radius: 20rpx;
-  background-color: gainsboro;
-  width: 25vw;
-  text-align: center;
-}
-.decide-text{
-  color: white;
-  position: relative;
-  top: 1vh;
-  font-size: 4vw;
-}
-.complete{
-  height: 5vh;
-  border-radius: 20rpx;
-  background-color: #4A7EB2;
-  width: 25vw;
-  text-align: center;
-}
+
+//.border{
+//  width: 343rpx;
+//  height: 39rpx;
+//  flex-direction: row;
+//  display: flex;
+//  margin-top: 2px;
+//  margin-left: 10px;
+//  margin-right: auto;
+//}
+//.icon1{
+//  width: 30rpx;
+//  height: 27rpx;
+//  margin-top: 5rpx;
+//}
+//.text1{
+//  font-size: 3.5vw;
+//  color: white;
+//  padding-right: 5vw;
+//  padding-left: 2vw;
+//}
+//.text2{
+//  font-size:3.5vw;
+//  color: white;
+//}
+//.mod1{
+//  height: 25rpx;
+//  border-radius: 12rpx;
+//  background-color: rgba(255,255,255,0.44);
+//  width: 126rpx;
+//  margin: 7rpx 0 0 0;
+//}
+//.mod2{
+//  width: 88rpx;
+//  height: 25rpx;
+//  border-radius: 12rpx;
+//  background-color: rgba(255,255,255,0.84);
+//}
+//.block2{
+//  position: relative;
+//  top: 13.5vh;
+//  margin-left: auto;
+//  margin-right: auto;
+//  width: 130rpx;
+//  height: 130rpx;
+//  border: 5px solid #D8D8D8;
+//  border-radius: 250rpx;
+//}
+//.block3{
+//  width: 30vw;
+//  position: relative;
+//  top: 15vh;
+//  margin-left: auto;
+//  margin-right: auto;
+//  text-align: center;
+//}
+//.name{
+//  color: white;
+//}
+//.block4{
+//  position: relative;
+//  top: 17vh;
+//  height: 6vh;
+//  border-radius: 14rpx;
+//  background-color: rgba(0,0,0,0.20);
+//  width: 589rpx;
+//  margin-left: auto;
+//  margin-right: auto;
+//}
+//.slogan{
+//  width: 67vw;
+//  height: 35rpx;
+//  display: block;
+//  overflow-wrap: break-word;
+//  color: rgba(255,255,255,1);
+//  font-size: 25rpx;
+//  line-height: 35rpx;
+//  text-align: left;
+//  position: relative;
+//  top: 1vh;
+//  margin-left: auto;
+//  margin-right: auto;
+//}
+//.collect{
+//  position: relative;
+//  top: 19vh;
+//  padding-left: 9vw;
+//}
+//.text3{
+//  color: white;
+//  font-size: 3.5vw;
+//}
+//.block5{
+//  position: relative;
+//  top: 20vh;
+//  height: 10.5vh;
+//  border-radius: 42rpx;
+//  background-color: rgba(255,255,255,0.3);
+//  display: flex;
+//  flex-direction: column;
+//  width: 661rpx;
+//  margin-left: auto;
+//  margin-right: auto;
+//  margin-bottom: 2vh;
+//}
+//.room{
+//  width: 584rpx;
+//  height: 151rpx;
+//  flex-direction: row;
+//  display: flex;
+//  margin: 14rpx 0 0 44rpx;
+//}
+//.info{
+//  width: 152rpx;
+//  height: 86rpx;
+//  display: flex;
+//  flex-direction: column;
+//  justify-content: space-between;
+//  margin: 7rpx 0 0 33rpx;
+//}
+//.text4{
+//  width: 120rpx;
+//  height: 1.5vh;
+//  color: rgba(0,0,0,1);
+//  font-size: 2.7vw;
+//  text-align: left;
+//  margin-left: 11rpx;
+//}
+//.roomName{
+//  height: 3vh;
+//  border-radius: 16rpx;
+//  background-color: rgba(0,0,0,0.2);
+//  margin-top: 5rpx;
+//  display: flex;
+//  flex-direction: column;
+//  width: 152rpx;
+//}
+//.text5{
+//  width: 98rpx;
+//  height: 2vh;
+//  color: rgba(255,255,255,1);
+//  font-size: 25rpx;
+//  margin-top: 0.4vh;
+//  margin-left: auto;
+//  margin-right: auto;
+//}
+//.text6{
+//  width: 90rpx;
+//  height: 1.6vh;
+//  color: rgba(0,0,0,0.79);
+//  font-size: 22rpx;
+//  line-height: 28rpx;
+//  position: relative;
+//  left: 20vw;
+//  top: 7vh;
+//}
+//.label{
+//  width: 33rpx;
+//  height: 8.1vh;
+//  margin-top: 7rpx;
+//  position: relative;
+//  left: 20.5vw;
+//  display: flex;
+//  flex-direction: column;
+//  justify-content: space-between;
+//}
+//.star{
+//  width: 33rpx;
+//  height: 33rpx;
+//}
+//.enter{
+//  width: 2vw;
+//  height: 1.4vh;
+//}
+//.block6{
+//  width: 22vw;
+//  height: 22vw;
+//  margin-left: auto;
+//  margin-right: auto;
+//  padding-top: 3vh;
+//}
+//.avatar{
+//  width: 22vw;
+//  height: 22vw;
+//  border: 5px solid #D8D8D8;
+//  border-radius: 250rpx;
+//}
+//.block7{
+//  position: relative;
+//  top: 2.5vh;
+//  width: 40vw;
+//  margin-left: auto;
+//  margin-right: auto;
+//}
+//.name1{
+//  height: 4.5vh;
+//  border-radius: 35rpx;
+//  background-color: rgba(38,34,57,0.45);
+//  width: 303rpx;
+//  text-align: center;
+//}
+//.name-text{
+//  height: 3vh;
+//  width: 30vw;
+//  position: relative;
+//  top: 0.6vh;
+//  margin-left: auto;
+//  margin-right: auto;
+//  color: white;
+//}
+//.block8{
+//  width: 235rpx;
+//  height: 63rpx;
+//  flex-direction: row;
+//  display: flex;
+//  justify-content: space-between;
+//  margin-left: auto;
+//  margin-right: auto;
+//  position: relative;
+//  top: 3.5vh;
+//}
+//.male{
+//  height: 3.85vh;
+//  border-radius: 32rpx;
+//  background-color: rgba(234,234,234,1);
+//  width: 91rpx;
+//  text-align: center;
+//}
+//.gender-text{
+//  position: relative;
+//  top: 0.45vh;
+//  font-size: 3.8vw;
+//}
+//.female{
+//  height: 3.85vh;
+//  border-radius: 32rpx;
+//  background-color: rgba(244,213,213,1);
+//  width: 91rpx;
+//  text-align: center;
+//}
+//.block9{
+//  height: 11.4vh;
+//  border-radius: 16rpx;
+//  border: 1px solid #C7E1FA;
+//  background-color: #C7E1FA;
+//  width: 468rpx;
+//  margin-left: auto;
+//  margin-right: auto;
+//  position: relative;
+//  top: 4.5vh;
+//}
+//.slogan1{
+//  width: 50vw;
+//  height: 7vh;
+//  display: block;
+//  overflow-wrap: break-word;
+//  color: rgba(0,0,0,1);
+//  font-size: 4vw;
+//  line-height: 35rpx;
+//  text-align: left;
+//  margin-top:2vh;
+//  margin-left: auto;
+//  margin-right: auto;
+//  word-break:break-all
+//}
+//.block10{
+//  width: 60vw;
+//  height: 5vh;
+//  flex-direction: row;
+//  display: flex;
+//  justify-content: space-between;
+//  margin-left: auto;
+//  margin-right: auto;
+//  position: relative;
+//  top: 6vh;
+//}
+//.cancel{
+//  height: 5vh;
+//  border-radius: 20rpx;
+//  background-color: gainsboro;
+//  width: 25vw;
+//  text-align: center;
+//}
+//.decide-text{
+//  color: white;
+//  position: relative;
+//  top: 1vh;
+//  font-size: 4vw;
+//}
+//.complete{
+//  height: 5vh;
+//  border-radius: 20rpx;
+//  background-color: #4A7EB2;
+//  width: 25vw;
+//  text-align: center;
+//}
