--- a/pages/mine/mine.less
+++ b/pages/mine/mine.less
@@ -22,49 +22,11 @@
     justify-content: center;
     text-align: center;
 
-    .gold-level{
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      align-content: center;
-      justify-items: center;
-      justify-content: center;
-
-      width: 360rpx;
-      height: 42rpx;
-      margin: 108rpx auto 8rpx;
-      border-radius: 16rpx;
-      border: 1px solid #7F7F7F;
-
-      image {
-        width: 32rpx; height: 32rpx;
-        margin-right: 8rpx;
-      }
-      text { font-size: 28rpx; }
-      .gold { width: 25%; text-align: left; }
-      .level { margin: 0 12rpx; }
-      .exp-background {
-        position: relative;
-
-        width: 40%;
-        height: 28rpx;
-        background: rgba(255,255,255,0.44);
-        border-radius: 14rpx;
-
-        .exp-bar {
-          position: absolute;
-          left: 0; right: 40%;
-          top: 0; bottom: 0;
-          background: #FFFFFF;
-          border-radius: 14rpx;
-        }
-      }
-    }
     .avatar {
       width: 128rpx; height: 128rpx;
       margin: 28rpx;
       border-radius: 50%;
-      border: #F8D1DB solid 8rpx;
+      border: #F8D1DB solid 4px;
     }
     .name {
       width: 384rpx;
@@ -194,7 +156,7 @@
       width: 192rpx; height: 192rpx;
       margin: 16rpx;
       border-radius: 50%;
-      border: #F8D1DB solid 10rpx;
+      border: #F8D1DB solid 5px;
     }
     .name {
       width: 60%;
