--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -2,14 +2,7 @@
 <view class="content">
  <view class="page">
    <view class="player-info">
-     <view class="gold-level">
-       <image src="../../images/coins.png"/>
-       <text class="gold">4396</text>
-       <text class="level">3级</text>
-       <view class="exp-background">
-         <view class="exp-bar"/>
-       </view>
-     </view>
+     <gold-level-display gold="50000" level="99" expRate="0.2333"/>
      <image class="avatar" src="../../images/avatar.jpeg"
             mode="aspectFill" bind:tap="onAvatarTap"/>
      <text class="name">测试君</text>
