--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -1,29 +1,33 @@
 <!--square.wxml-->
 <view class="container">
 
-  <view class="container-top">
-    <view class="userInfo">
-      <view class="userInfo-avatar">
-        <image class="avatarImg" src="../../assets/square/room.jpg" mode="widthFix"></image>
-      </view>
-      <view class="userInfo-nickName">测试君</view>
-    </view>
+<!--  <view class="container-top">-->
+<!--    <view class="userInfo">-->
+<!--      <view class="userInfo-avatar">-->
+<!--        <image class="avatarImg" src="../../assets/square/room.jpg" mode="widthFix"></image>-->
+<!--      </view>-->
+<!--      <view class="userInfo-nickName">测试君</view>-->
+<!--    </view>-->
 
-    <view class="btn-set">
-      <image src="../../assets/main/config.png" mode="widthFix" class="btn"></image>
-      <image src="../../assets/main/config.png" mode="widthFix" class="btn" bindtap="onClickRoomConfig"></image>
-    </view>
+<!--    <view class="btn-set">-->
+<!--      <image src="../../assets/main/config.png" mode="widthFix" class="btn"></image>-->
+<!--      <image src="../../assets/main/config.png" mode="widthFix" class="btn" bindtap="onClickRoomConfig"></image>-->
+<!--    </view>-->
+<!--  </view>-->
+<!--  <view class="gold-level">-->
+<!--    <view class="gold">-->
+<!--      <image class="goldImg" src="../../assets/square/gold.png" mode="widthFix"></image>-->
+<!--      <text>1634</text>-->
+<!--    </view>-->
+<!--    <view class="level">-->
+<!--      <view class="text">{{3}}级</view>-->
+<!--      <progress percent="80" stroke-width="14" color="white" border-radius="10"></progress>-->
+<!--    </view>-->
+<!--  </view>-->
+  <view class="container-top">
+    <avatar-display avatar="../../assets/square/room.jpg" name="Exermon" />
   </view>
-  <view class="gold-level">
-    <view class="gold">
-      <image class="goldImg" src="../../assets/square/gold.png" mode="widthFix"></image>
-      <text>1634</text>
-    </view>
-    <view class="level">
-      <view class="text">{{3}}级</view>
-      <progress percent="80" stroke-width="14" color="white" border-radius="10"></progress>
-    </view>
-  </view>
+  <gold-level-display gold="50000" level="99" expRate="0.2333"/>
   <view class="room-name">
     <input class="text" value="摆烂小屋" placeholder="房间名不能为空~"></input>
   </view>
