--- a/pages/square/square.less
+++ b/pages/square/square.less
@@ -50,8 +50,8 @@ page {
 
       display: flex;
       flex-direction: row;
-      align-items: center;
-      justify-content: center;
+      align-items: start;
+      justify-content: start;
       flex-wrap: wrap;
 
       .room {
@@ -60,8 +60,10 @@ page {
         align-items: center;
         width: 50%;
 
+        margin: 24rpx 0;
+
         .room-thumbnail {
-          width: 100%;
+          width: 60%;
         }
         .room-desc {
           width: 100%;
@@ -70,10 +72,7 @@ page {
           flex-direction: column;
           align-items: center;
 
-          position: relative;
-          bottom: 70rpx;
-
-          .room-nickName {
+          .room-user-name {
             margin: 16rpx 0;
           }
 
