--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -2,7 +2,14 @@ page {
   background: -webkit-linear-gradient(top, #C7E1FA, #4F8DCC);
 }
 
-.container {
+#main-canvas {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2
+}
+
+.content {
 
   .container-top {
     position: fixed;
