[Enhancement] 尝试测试pixi，尚未成功â

--- a/pages/main/main.less
+++ b/pages/main/main.less
@@ -1,12 +1,10 @@
-page {
-  background: -webkit-linear-gradient(top, #C7E1FA, #4F8DCC);
-}
 
 #main-canvas {
   position: absolute;
+  left: 0; top: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 2
+  z-index: -100
 }
 
 .content {
